<resources>
    <string name="app_name">One Card</string>

    <string name="hello_world">Hello world!</string>
    <!-- Actions menu -->
    <string name="action_settings">Settings</string>

    <!-- Social Network -->
    <string name="facebook_app_id">827935720625906</string>
    <string name="twitter_consumer_key">6g1huJecEp9QwVtk4mBnItLug</string>
    <string name="twitter_consumer_secret">CT3di3FOQWussd9nR89SMnZklZ3zdYz9UcJfWP42yPmnLFqidu</string>
    <string name="google_app_id">693416510141-70qgl15e83omcel4ojvb0p9skk7nobea.apps.googleusercontent.com</string>
        <!-- Google + -->
    <string name="btn_login_from_google">Login with Google!!</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Recoke Access</string>
    <string name="logo_content">Logo</string>

        <!-- Social btns text -->
    <string name="com_facebook_loginview_log_out_button">Desconectar </string>
    <string name="com_facebook_loginview_log_in_button">Desconectar </string>
    <string name="com_facebook_loginview_log_in_button_long">Conectar con Facebook </string>

    <string name="common_signin_button_text">Conectar</string>
    <string name="common_signin_button_text_long">Conectar con Google+</string>
    <string name="tw__login_btn_txt">Conectar con Twitter </string>

    <string name="action_example">Example action</string>

    <!-- Navigation Drawer Options -->
    <string-array name="navigation_drawer_options">
        <item>Inicio</item>
        <item>Consultar Movimientos</item>
        <item>Configuracion</item>
    </string-array>

    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="title_navigation_drawer">Opciones</string>

    <!-- Seleccion de tipo de transaccion a mostrar -->
    <string-array name="transaction_type">
        <item>Últimos 10 movimientos</item>
        <item>Mes actual</item>
        <item>Mes anterior</item>
    </string-array>

    <!-- Descripcion de estados -->
    <string-array name="states">
        <item>Desconocido</item>
        <item>Inactica</item>
        <item>Asignada</item>
        <item>En operacion</item>
        <item>Suspendida</item>
        <item>Baja</item>
        <item>Perdida</item>
        <item>Robada</item>
        <item>Remplazada</item>
        <item>Cancelada</item>
    </string-array>

    <!-- Descripcion de productos -->
    <string-array name="products">
        <item>PRODUCTO DESCONOCIDO</item>
        <item>PREPAGO</item>
        <item>REGALO</item>
        <item>CREDIP-PLUS</item>
        <item>MONEDERO VALE DESPENSA</item>
        <item>BONOS DE GASOLINA</item>
        <item>ABIERTO(DEBITO)</item>
        <item>GASOLINA</item>
        <item>ABIERTO(CREDITO)</item>
        <item>VIATICOS y GASTOS</item>
        <item>CREDI APARTADO</item>
        <item>COMIDA</item>
        <item>GASTOS GENERALES</item>
        <item>RED ONECARD</item>
        <item>MONEDERO ELECTRONICO-DESPENSA</item>
        <item>VALE DE DESPENSA</item>
        <item>MONEDERO ELECTRONICO-COMBUSTIBLE</item>
        <item>PRODUCTO DESCONOCIDO</item>
        <item>VIATICOS y GASTOS MASTER CARD</item>
        <item>IMSS TRASLADOS</item>
    </string-array>

    <string name="reg_email">Correo Electronico</string>
    <string name="reg_password">Contraseña</string>
    <string name="ref_password_confirm">Confirmar contraseña</string>
    <string name="reg_card_number">Numero de tarjeta</string>
    <string name="reg_create_account_button">Crear cuenta</string>
    <string name="reg_email_hint">Correo electronico</string>
    <string name="reg_password_hint">Contraseña</string>
    <string name="reg_password_confirm_hint">Confirma contraseña</string>
    <string name="reg_card_hint">506223412341234</string>

    <string name="reg_tag_invalid">0</string>
    <string name="reg_tag_valid">1</string>

    <string name="reg_error_email">formato de correo invalido</string>
    <string name="reg_error_password">La contraseña debe ser de 6 a 20 caracteres, 1 mayuscula, 1 minutscula y 1 numero</string>
    <string name="reg_error_password_match">Las contraseñas deben ser iguales</string>
    <string name="reg_error_card">Numero de tarjeta invalido</string>

    <string name="row_cards_image_content">card_image</string>
    <string name="login_connect_with_label">Conectar con:</string>
    <string name="login_sign_in_button">Iniciar sesion</string>
    <string name="login_register_button">registrarse</string>
    <string name="content_trans_card">Tarjeta</string>

    <string name="login_email_textbox_hint">usuario / email</string>
    <string name="login_password_textbox_hint">Contraseña</string>

    <string name="app_exit_confirmation_message">Vuelva a presionar regresar para sail de la aplicación</string>
    <string name="content_nav_drawer_item">menu item</string>

    <string name="font_roboto_medium">sans-serif</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag_notifications_header">Notificaciones</string>
    <string name="content_icon">icon</string>

    <!-- Mensajes de Dialogs -->
    <string name="dialog_change_status_title_activating">Activar tarjeta</string>
    <string name="dialog_change_status_message_activating">Al reactivar la tarjeta podran restablecerse todos los servicios que incluye el producto. ¿Esta seguro que quiere activarla?</string>
    <string name="dialog_change_status_title_deactivating">Desactivar tarjeta</string>
    <string name="dialog_change_status_message_deactivating">Al desactivar la tarjeta, esta quedara totalmente inavilitada suspendiendo todos sus servicios hasta ser reactivada. ¿Esta seguro que quiere desactivarla?</string>
    <string name="dialog_default_positive_button">Si</string>
    <string name="dialog_default_negative_button">No</string>
    <string name="dummy_card">1234-5678-1425-2536</string>
    <string name="string_card_number">Numero de tarjeta</string>
    <string name="string_expiration_date">Fecha de expiración</string>
    <string name="dummy_expiration_date">11/78</string>

</resources>
