<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/dialog_addcard_logo_framelayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:background="#9affde">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_one_card" />
    </FrameLayout>

    <TextView
        android:id="@+id/dialog_addcard_cardnumber_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_addcard_logo_framelayout"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        android:text="@string/string_card_number" />

    <EditText
        android:id="@+id/dialog_addcard_cardnumber_editext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_addcard_cardnumber_textview"
        android:layout_margin="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/dummy_card"
        android:inputType="number" />

    <TextView
        android:id="@+id/dialog_addcard_expiration_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_addcard_cardnumber_editext"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:text="@string/string_expiration_date" />

    <DatePicker
        android:id="@+id/dialog_addcard_expiration_datepicker"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@id/dialog_addcard_expiration_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:spinnersShown="true"/>

</RelativeLayout>